# TPI

./: .gitignore  launcher.bat  mat_to_csv.py  pyproject.toml  temp.py  test_kfold.py  tmpclaude-44a0-cwd
.claude/: settings.local.json
analysis/: correlation.py  data_check.py  downsample.py  explain_kfold.py  location_clustering.py  sequential_feature_selection.py  test_downsample_smooth.py
analysis/copl/: check_rkhs.py  check_similarity.py
docs/: copl.md  copl_summarized.md  tsfresh.md  vpl_pairwise_explanation.md
scripts/: explain_model.py  generate_vmc_datasets.py  optimize_copl.py  optimize_model.py  optimize_model_2.py  run_baseline.py  run_copl.py  run_gui.py  run_independent.py  run_maml.py  run_tsfresh.py  run_vpl_binary.py  run_vpl_pairwise.py  train_backbone.py  train_copl.py  train_copl_new.py  train_maml.py  train_model.py  train_model_copl.py  train_model_kfold.py  train_model_vpl.py  train_model_vpl_binary.py  train_model_vpl_binary_new.py  train_model_vpl_pairwise.py  train_model_vpl_pairwise_new.py  train_tsfresh.py  train_tsfresh_new.py  train_vmc_vpl.py  train_vpl_binary.py
scripts/train/: copl.py  maml.py
scripts_new/: run_baseline.py  run_copl.py  run_independent.py  run_maml.py  run_tsfresh.py  run_vpl_binary.py  run_vpl_pairwise.py
src/configs/: config.yaml  features.py  features.yaml  gui.py  registries.py  utils.py
src/data/: __init__.py  loader.py
src/gui/: analysis_page.py  gui_main.py
src/model/: __init__.py  base.py  episode_wise.py  experiment.py  linear_combination.py  step_wise.py  trainer.py  utils.py
src/optimizer/: __init__.py  base.py  base_2.py  bayesian.py  bayesian_2.py  exhaustive.py
src/utils/: __init__.py  arg_parser.py  data_loader.py  evaluator.py  explainability.py  logger.py  optimizer.py  paths.py  seed.py  trainer.py  utils.py  visualization.py  vpl_dataset.py  vpl_pairwise_dataset.py
src/vmc/: configs.py
src/xai/: README.md  __init__.py  model_adapters.py  models.py  timeshap_explainer.py  utils.py  visualization.py
src_new/: evaluation.py
src_new/data/: catalog.py  splits.py  transforms.py
src_new/model/: base.py  experiment.py
test_dev/: advanced_model.py  test_vpl_dataset.py  test_vpl_training.py  visualize_dataset_stats.py  vpl.py
(+99 files in other folders)
