[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "captum",
    "matplotlib>=3.5.0,<3.9",
    "numpy>=1.21.0,<2.0",
    "opencv-python>=4.6.0",
    "optuna>=3.0.0",
    "pandas>=1.3.0,<2.0",
    "pyqtgraph>=0.12.0",
    "pyside6>=6.3.0,<6.6",
    "ruamel-yaml>=0.17.0",
    "scikit-learn>=1.0.0,<1.4",
    "scipy>=1.7.0,<1.12",
    "seaborn>=0.11.0",
    "torch>=2.0.0,<2.5",
    "torchvision>=0.15.0,<0.20",
    "timeshap>=1.0.0",
    "shap>=0.37.0,<0.43",
    "plotly>=5.0.0",
    "altair<=4.2.0",
]

[tool.setuptools]
packages = ["scripts", "src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
