[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.7",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "optuna>=4.6.0",
    "osqp>=1.0.5",
    "pandas>=2.3.3",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.0",
    "ruamel-yaml>=0.18.17",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tsfresh>=0.21.1",
    "wandb>=0.24.0",
]

[tool.setuptools]
packages = ["scripts", "src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
